# silica-agent

./: .env.example  .gitignore  LICENSE  README.md  cliff.toml  pyproject.toml
.claude/: settings.json
.claude/hooks/: uv-guard.py
.github/: dependabot.yml
.github/workflows/: release.yml
docs/: SILICA.md  silica_architecture_addendum.md  silica_architecture_review.md
evals/: factscore.py  probe_judge_ab.py  probe_judge_floor.py  probe_regrade_sweep.py  probe_single_hop_regrade.py  probe_temporal_regrade.py  test_factscore.py  test_vault_energy_bench.py  test_vault_energy_realdriver.py
evals/golden/: runner.py
evals/locomo/: runner.py  test_locomo_e2e.py
evals/longmemeval/: runner.py
obsidian-silica/: PROTOCOL.md  bridge.test.ts  bridge.ts  handlers.test.ts  handlers.ts
silica/: __init__.py  cli.py  config.py  prompts.py
silica/agent/: bounds.py  bus.py  commit.py  compaction.py  concurrency.py  constraints.py  events.py  leash.py  llm.py  loop.py  progress.py  providers.py  subagent.py
silica/capabilities/: __init__.py  _base.py  codewiki.py  dedup.py  enrich.py  expand.py  orphan.py  profile.py  profiles_builtin.py  refine.py  runtime.py
silica/capabilities/prompts/: dedup_prompt.txt  distiller_prompt.txt  refiner_prompt.txt
silica/capabilities/prompts/profiles/default/: examples.md  quality.md  rubric.md
silica/capabilities/prompts/profiles/transcript/: examples.md  quality.md  rubric.md
silica/driver/: __init__.py  base.py  cli_backend.py  fs_backend.py  ws_backend.py
silica/kernel/: assembly.py  atomic_write.py  autolink.py  bulk.py  classify.py  codeast.py  codedocs.py  codegraph.py  cohesion.py  contested.py  context_builder.py  cooccurrence.py  deferred.py  embed.py  episodic.py  frontmatter.py  gitstate.py  graph_diff.py  graph_export.py  graph_report.py  keyphrase.py  language.py  ledger.py  lexical.py  linter.py  merge.py  migrate.py  mindmap.py  moc.py  ofm.py  ops.py  ops_io.py  overlay.py  paths.py  perception.py  prep_delegation.py  progress.py  provenance.py  recall_weights.py  recon.py  (+18 more)
silica/kernel/graph_report/: code_signals.py  compute.py  cooccur_delta.py  render.py
silica/kernel/health/: __init__.py  lint.py
silica/onboarding/: checks.py  wizard.py
silica/planner/: analyst_plan.py  progress.py  warnings.py  workqueue.py
silica/recipes/: injector.yaml  refiner.yaml
silica/router/: base_fsm.py  coordinator.py  orchestrator.py  organize_fsm.py  prefetch.py  refiner_fsm.py
silica/router/states/: collision.py  distill.py  finalize.py  linking.py  setup.py  write.py
silica/sources/: code.py  convert.py  notebook.py  registry.py  web_research.py
silica/tools/: __init__.py  atomic.py  codedocs_tool.py  composed.py  curate.py  delegate_tool.py  graph.py  notes.py  pipeline.py  runners.py  wrapped.py
silica/ui/: banner.py  commands.py  connect.py  home.py  logging.py  mcp.py  prompt.py  renderer.py  style.py  theme.py
silica/ui/assets/: ascii-art-font.txt
silica/ui/web/: __init__.py  graph_view.py  server.py
silica/ui/web/static/: app.css  app.js  index.html
silica/workers/: distiller_prompt.txt  orphan_prompt.txt  profile.py  profiles_builtin.py  runtime.py
skills/silica/: SKILL.md
tests/: conftest.py  test_adr_migration.py  test_agent_constraints.py  test_agent_guards_and_provider.py  test_agent_history_repair.py  test_analyst_plan.py  test_anneal.py  test_assembly.py  test_atomic_write.py  test_autolink.py  test_autolink_delegation.py  test_autolink_facade.py  test_bulk.py  test_bulk_verify.py  test_bus.py  test_cancel_token.py  test_cancel_tool_seam.py  test_capability_seam.py  test_clean_tag.py  test_cli_clear.py  test_cli_create_missing_folder.py  test_cli_graph_keying.py  test_cli_subcommands.py  test_cluster_cache.py  test_codeast.py  test_codedocs.py  test_codegraph.py  test_cohesion.py  test_commit.py  test_compaction.py  test_connect.py  test_contested.py  test_context_builder.py  test_convert.py  test_cooccurrence.py  test_cooccurrence_refresh_tool.py  test_coordinator.py  test_curate_apply.py  test_dedup_batch.py  test_dedup_refine_commands.py  (+137 more)
tests/eval/: coherence_harness.py  phase0_gates.py  test_phase0_gates.py
tests/eval/golden/: baseline.json  probe_correlate.py  probe_dedup.py  probe_fusion.py  runner.py
tests/eval/locomo/: __init__.py  __main__.py  repair_dangling.py  runner.py  test_locomo_adapter.py  test_locomo_e2e.py  test_locomo_timeline.py
tests/eval/longmemeval/: metrics.json  probes.py  runner.py  test_longmemeval_adapter.py  test_probes.py
tests/eval/musique/: __init__.py  __main__.py  metrics.json  runner.py  test_musique_adapter.py
tests/fixtures/: __init__.py  vault_factory.py
tests/fixtures/synthetic_vault/: .silica_fixture_manifest.json
tests/fixtures/synthetic_vault/A/: Cellula.md
tests/fixtures/synthetic_vault/B/: Cellula.md
tests/fixtures/synthetic_vault/BadMeta/: TagInline.md
tests/fixtures/synthetic_vault/Concetti/: Backpropagation.md  Gradiente.md  Percettrone.md
tests/fixtures/synthetic_vault/Hub/: Concetti.md
tests/fixtures/synthetic_vault/Isolata/: Orfana.md
tests/fixtures/synthetic_vault/Lean/: Stub.md  Vuota.md
tests/fixtures/synthetic_vault/Mono/: Monolite.md
tests/fixtures/synthetic_vault/_inbox/: Lezione.md  Nuovo.md
tests/golden/: __init__.py  autolink_cases.json  collision_threshold_cases.json  test_driver_parity.py  test_eval_autolink.py  test_eval_fusion.py  test_eval_keyphrase.py  test_golden_regression.py
web/: README.md  animation.html  index.html  style.css  vercel.json
