[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "silica/_version.py"

[project]
name = "silica"
dynamic = ["version"]
description = "Obsidian-native agentic CLI — vault curation with quality gates"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "litellm",
  "httpx",
  "pydantic>=2.0",
  "prompt_toolkit>=3.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "rich",
  "art",
  "networkx",
  "markdown-it-py",
  "orjson",
  "openai",
  "numpy>=2.4.6",
  "snowballstemmer",
  "stop-words>=2025.11.4",
  "tree-sitter>=0.23",
  "tree-sitter-language-pack",
  "yake>=0.7.3",
  "pdfminer-six>=20260107",
]

[project.optional-dependencies]
# AGPL-3.0 (or Artifex commercial) — kept OUT of the Apache-2.0 core. Opt-in:
# `pip install silica[pdf]`. Using it makes the running combination AGPL for you.
pdf = ["pymupdf4llm>=1.27.2.3"]
dev = ["pytest>=8.0", "mypy>=1.10", "import-linter>=2.0"]

[project.scripts]
silica = "silica.cli:main"

[tool.setuptools.packages.find]
include = ["silica", "silica.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.importlinter]
root_packages = ["silica"]

[[tool.importlinter.contracts]]
name = "capabilities (procedural memory) does not import the decision cycle"
type = "forbidden"
source_modules = ["silica.capabilities"]
forbidden_modules = ["silica.router"]
# Direct imports only: the transitive path via agent.commit -> tools.composed
# -> tools.runners -> router predates this contract and is a separate finding.
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "capabilities internals are private — consumers go through the package root"
type = "forbidden"
source_modules = [
  "silica.agent",
  "silica.router",
  "silica.tools",
  "silica.kernel",
  "silica.driver",
  "silica.sources",
  "silica.ui",
  "silica.onboarding",
  "silica.cli",
  "silica.config",
]
forbidden_modules = [
  "silica.capabilities._base",
  "silica.capabilities.dedup",
  "silica.capabilities.enrich",
  "silica.capabilities.orphan",
  "silica.capabilities.refine",
  "silica.capabilities.profile",
  "silica.capabilities.profiles_builtin",
  "silica.capabilities.runtime",
]
# Direct imports only: reaching internals through the package root is the
# sanctioned path (the root re-exports the seam).
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "kernel is the lowest layer under the seam — never imports the decision cycle"
type = "forbidden"
source_modules = ["silica.kernel"]
forbidden_modules = ["silica.router", "silica.capabilities"]
# This is the invariant that keeps workqueue/progress legal homes in kernel
# (capabilities -> kernel.workqueue must never become a cycle). Note: kernel
# is NOT pure — lazy imports into agent/ and tools/ exist (see ADR-0016 and
# the AUDIT-COALA WATCH list); this contract codifies only what is true today.
allow_indirect_imports = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["yaml", "yaml.*", "networkx", "networkx.*"]
ignore_missing_imports = true
