[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "silica/_version.py"

[project]
name = "silica"
dynamic = ["version"]
description = "Obsidian-native agentic CLI — vault curation with quality gates"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
  "litellm",
  "httpx",
  "pydantic>=2.0",
  "prompt_toolkit>=3.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "rich",
  "networkx",
  "markdown-it-py",
  "orjson",
  "openai",
  "numpy>=2.4.6",
  "snowballstemmer",
  "stop-words>=2025.11.4",
  "tree-sitter>=0.23",
  "tree-sitter-language-pack",
  "yake>=0.7.3",
  "scipy>=1.17.1",
  "mdit-py-plugins>=0.6.1",
  "latex2mathml>=3.81.0",
]

[project.optional-dependencies]
# PDF support is not an extra: the provider (markitdown / docling / mineru — all
# permissively licensed) is installed manually. See SILICA_PDF_PROVIDER.
# Opt-in localhost web GUI (`silica --gui`); python-multipart backs the drop-zone upload:
gui = ["fastapi", "uvicorn", "python-multipart"]
dev = ["pytest>=8.0", "mypy>=1.10", "import-linter>=2.0"]
connect = [
    "websockets>=16.0",
]
# Opt-in stdio MCP server (`silica mcp`) — Silica as vault memory for MCP clients:
mcp = ["mcp>=1.0"]

[project.scripts]
silica = "silica.cli:main"

[tool.setuptools.packages.find]
include = ["silica", "silica.*"]

[tool.setuptools.package-data]
silica = ["overlays/*.yaml", "ui/web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.importlinter]
root_packages = ["silica"]
# Required so the "graph data stays offline" contract can forbid the external
# `httpx` module (see that contract below).
include_external_packages = true

[[tool.importlinter.contracts]]
name = "capabilities (procedural memory) does not import the decision cycle"
type = "forbidden"
source_modules = ["silica.capabilities"]
forbidden_modules = ["silica.router"]
# Direct imports only: the transitive path via agent.commit -> tools.composed
# -> tools.runners -> router predates this contract and is a separate finding.
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "capabilities internals are private — consumers go through the package root"
type = "forbidden"
source_modules = [
  "silica.agent",
  "silica.router",
  "silica.tools",
  "silica.kernel",
  "silica.driver",
  "silica.sources",
  "silica.ui",
  "silica.onboarding",
  "silica.cli",
  "silica.config",
]
forbidden_modules = [
  "silica.capabilities._base",
  "silica.capabilities.dedup",
  "silica.capabilities.enrich",
  "silica.capabilities.orphan",
  "silica.capabilities.refine",
  "silica.capabilities.profile",
  "silica.capabilities.profiles_builtin",
  "silica.capabilities.runtime",
]
# Direct imports only: reaching internals through the package root is the
# sanctioned path (the root re-exports the seam).
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "kernel is the lowest layer under the seam — never imports the decision cycle"
type = "forbidden"
source_modules = ["silica.kernel"]
forbidden_modules = ["silica.router", "silica.capabilities"]
# This is the invariant that keeps workqueue/progress legal homes in kernel
# (capabilities -> kernel.workqueue must never become a cycle). Note: kernel
# is NOT pure — lazy imports into agent/ and tools/ exist (see ADR-0016 and
# the AUDIT-COALA WATCH list); this contract codifies only what is true today.
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "capability workers are peers — they never import each other (P9)"
type = "independence"
modules = [
  "silica.capabilities.dedup",
  "silica.capabilities.enrich",
  "silica.capabilities.orphan",
  "silica.capabilities.refine",
]
# profile/runtime/_base sono infrastruttura condivisa, non peer: fuori lista.
ignore_imports = [
  # il control shell (subagent runner) importa il registry dei worker per
  # dispatciarli: e' l'attivazione decisa dal coordinator (P9), non un peer import.
  "silica.agent.subagent -> silica.capabilities",
]
# Residuo: catene instradate attraverso questo arco ignorato (subagent ->
# capabilities) sono invisibili a questo contratto — copre solo import diretti
# e peer import fuori dalla rotta di dispatch.

[[tool.importlinter.contracts]]
name = "graph structure is deterministic — structural modules never import agent (P2/DKB)"
type = "forbidden"
source_modules = [
  "silica.kernel.cooccurrence",
  "silica.kernel.keyphrase",
  "silica.kernel.ast",
  "silica.kernel.graph_diff",
  "silica.kernel.autolink",
  "silica.kernel.graph_report.compute",
  "silica.kernel.graph_report.cooccur_delta",
  "silica.kernel.graph_report.models",
  "silica.kernel.graph_report.render",
  "silica.kernel.codegraph",
]
forbidden_modules = ["silica.agent"]
# embed_signals e run_substrate NON sono in lista: importano get_embedder
# (overlay di embedding, lecito). classify/prep_delegation chiamano LLM ma
# non costruiscono struttura del grafo — fuori scope di questo contratto.
ignore_imports = [
  # embed_signals e' overlay di embedding (lecito, escluso dai source_modules);
  # compute lo importa per assemblare il report, non per costruire struttura.
  "silica.kernel.graph_report.embed_signals -> silica.agent.providers",
]

[[tool.importlinter.contracts]]
name = "structural is not semantic — codegraph never enters the fusion legs"
type = "forbidden"
source_modules = ["silica.kernel.relatedness", "silica.kernel.rerank"]
forbidden_modules = ["silica.kernel.codegraph"]
# Import edges are mechanical dependency, not semantic proximity: an import
# hub (paths.py) would flood related_notes/RRF with structurally-adjacent,
# semantically-empty neighbors (spec-code-lane, Principio ordinatore).

[[tool.importlinter.contracts]]
name = "graph data stays offline — the kernel viewer split leaves no network dep"
type = "forbidden"
source_modules = ["silica.kernel.graph_export"]
forbidden_modules = ["httpx"]
# The viewer (render_html/export_graph) moved to silica.ui.web.graph_view and
# now inlines a *vendored* JS bundle; the CDN fetch (httpx) is gone. This freezes
# that: the deterministic data module must never re-acquire a network dependency.

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "yaml", "yaml.*", "networkx", "networkx.*",
    # Optional PDF providers, installed manually (see SILICA_PDF_PROVIDER):
    "markitdown", "markitdown.*", "docling.*", "docling_core.*",
]
ignore_missing_imports = true
